[metadata]
name = mako
author = Lisa Röttjers
author-email = lisa.rottjers@kuleuven.be
summary = Platform for network analysis with Neo4j
license = Apache-2.0
description-file =
    README.md
home-page = https://github.com/ramellose/mako
requires-python = >=3.5
classifier =
    Development Status :: 1 - Alpha/Unstable
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    mako

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
console_scripts =
    mako = mako.main:main