[metadata]
name = mako
author = Lisa Röttjers
author-email = lisa.rottjers@kuleuven.be
description = Platform for network analysis with Neo4j
license = Apache-2.0
long_description = README.md
long_description_content_type = text/markdown
home-page = https://github.com/ramellose/mako
requires-python = >=3.5
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[files]
packages =
    mako

[entry_points]
pbr.config.drivers =
    plain = pbr.cfg.driver:Plain
console_scripts =
    mako = mako.main:main